# buzinaeva_tv_fossdev

./: .gitignore  Makefile  Makefile.mak  MakefilePractice  README.md  docker-compose.yaml  requirements.txt  setup.py
demo-practice/docs/: SPECIFICATION.md
docs/: TASK.md
docs_domain/: PracticeMakefile  USAGE.rst  conf.py  index.rst  requirements.txt  setup.py
docs_domain/_build/: .buildinfo  USAGE.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs_domain/_build/.doctrees/: USAGE.doctree  environment.pickle  index.doctree
docs_domain/_build/_static/: documentation_options.js
docs_domain/docs/: DOMAIN.md
docs_domain/src/: main.py  sales.py
docs_domain/tests/: test_main.py  test_sales.py
file_exchanger/: diagram.drawio
file_exchanger/docs/: SequentalDiagram.drawio  diagramofactions.drawio
fossdev_utils/: checker.py  cli.py
order_service/: Dockerfile  pyproject.toml
order_service/src/: main.py
order_service/src/app/: main.py
product_service/: Dockerfile  pyproject.toml
product_service/src/app/: main.py
scripts/: check_requirements.py
source/: USAGE.rst.txt  conf.py  index.rst
source/_build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
source/_build/.doctrees/: index.doctree
source/_build/_static/: documentation_options.js
src/: app.py  calc.py  example.py  ndfl.py  service.py
src/ndfl.egg-info/: PKG-INFO  SOURCES.txt
task5-compose/: Makefile
testing/frameworks/: setup.py
testing/principle/: setup.py
tests/: test_basic_ndfl.py
(+8 files in other folders)
