[tool.poetry]
name = "order-service"
version = "0.1.0"
description = "Order service for FOSS project"
authors = ["Tatiana Buzinaeva <waqqueta@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"